feat: Add 'angles' as dependency of data_integrate
This package will be used by SimpleLidarSubscriber, as well as possibly
other code.

--- a/src/data_integrate/package.xml
+++ b/src/data_integrate/package.xml
@@ -24,6 +24,7 @@
   <depend>geometry_msgs</depend>
   <depend>image_transport</depend>
   <depend>core_msgs</depend>
+  <depend>angles</depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
