--- a/src/data_integrate/CMakeLists.txt
+++ b/src/data_integrate/CMakeLists.txt
@@ -36,10 +36,10 @@ include_directories(
   ${catkin_INCLUDE_DIRS}
   include
 )
-add_executable(data_show_node src/data_show.cpp)
+add_executable(data_show_node src/data_show.cpp src/simple_lidar_subscriber.cpp)
 add_dependencies(data_show_node core_msgs_generate_messages_cpp)
 
-add_executable(data_integation_node src/data_integration.cpp)
+add_executable(data_integation_node src/data_integration.cpp src/simple_lidar_subscriber.cpp)
 add_dependencies(data_integation_node core_msgs_generate_messages_cpp)
 target_link_libraries(data_show_node
   ${catkin_LIBRARIES} ${OpenCV_LIBS} ${cv_bridge_LIBRARIES}
